<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">theCarnaby</string>
    
    <string name="title_brands">品牌</string>
	<string name="title_newarrivals">新品</string>
	<string name="title_news">新闻</string>
	<string name="title_coupons">优惠券</string>
	<string name="title_shops">店铺</string>
	<string name="title_videos">视频</string>
	<string name="title_share">分享</string>
	<string name="title_preferences">设置</string>
	
	<string name="title_gallery">图库</string>
	<string name="title_collections">系列</string>
	
	<!-- brands -->
	<string name="label_brand1">YANZI by theCanaby</string>
	<string name="label_brand2">theCanaby</string>
	<string name="label_collection1">YANZI 2010FW</string>
	<string name="label_collection2">PUNK</string>
	<string name="label_collection3">VICTORIA</string>
	<string name="label_collection4">YANZI by theCanaby</string>
	<string name="label_collection5">theCanaby</string>
	
	
	<!-- new arrivals -->
	
	
	<!-- coupons -->
	<string name="lable_viewshop">查看店铺详情</string>
	<string name="lable_sharecoupon">分享给好友</string>
	
	<!-- shops -->
	<string name="title_shopdetail">店铺详情</string>
	<string name="label_gotomap">查看地图</string>
	
	<!-- videos -->
	
	
	<!-- share -->
	<string name="label_share_subject_app">分享精彩APP</string>
	<string name="label_share_content_app">跟您分享下我找到的这个很棒的APP－theCarnaby,去下载看看吧。</string>
	
	<string name="label_share_subject_coupon">分享theCarnaby优惠券</string>
	
	<!-- preferences -->
	
	
	<string name="label_connection_error">需要网络连接：网络连接失败！</string>
</resources>
